Archive2/7a/9b672eb5875661/output
main.cpp:10:5: error: ambiguous conversion for static_cast from 'foo<std::complex<double> >' to 'std::complex<double>'
    static_cast<std::complex<double>>(foo<std::complex<double>>{});
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/complex:1193:12: note: candidate is the implicit copy constructor
    struct complex<double>
           ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/complex:1193:12: note: candidate is the implicit move constructor
1 error generated.
