Archive2/7a/9b672eb5875661/main.cpp
#include <complex>

template <typename T>
struct foo {
    operator T() const;
    operator T&();
};

int main() {
    static_cast<std::complex<double>>(foo<std::complex<double>>{});
}